--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "quill-delta-to-html",
+  "name": "quill-delta-to-react",
   "version": "0.12.1",
   "description": "Converts Quill's delta ops to HTML",
   "main": "./dist/commonjs/main.js",
+  "type": "module",
   "types": "./dist/commonjs/main.d.ts",
   "dependencies": {
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "@types/lodash.isequal": "^4.5.5",
-    "@types/mocha": "^2",
-    "@types/node": "^7.0",
+    "@types/node": "^20.11.30",
+    "@types/quill": "^2.0.14",
     "browserify": "^16.2",
     "coveralls": "^3.0",
     "husky": "^3.0.9",
-    "mocha": "^6",
-    "nyc": "^14.1",
-    "prettier": "^2.0.4",
+    "prettier": "^3.2.5",
     "pretty-quick": "^2.0.1",
-    "ts-node": "^8",
-    "typescript": "^2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   },
   "scripts": {
-    "browserbundle": "./node_modules/browserify/bin/cmd.js ./dist/commonjs/QuillDeltaToHtmlConverter.js -o ./dist/browser/QuillDeltaToHtmlConverter.bundle.js -s QuillDeltaToHtmlConverter ",
-    "browser": "npm run browserbundle && echo '; window.QuillDeltaToHtmlConverter = window.QuillDeltaToHtmlConverter ? window.QuillDeltaToHtmlConverter.QuillDeltaToHtmlConverter : window.QuillDeltaToHtmlConverter; ' >>  ./dist/browser/QuillDeltaToHtmlConverter.bundle.js ",
-    "build": "./node_modules/typescript/bin/tsc &&  npm run browser ",
-    "test": "./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha --require ts-node/register -b \"./test/**/*.ts\"  ",
+    "build": "./node_modules/typescript/bin/tsc",
+    "format": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
+    "typecheck": "./node_modules/typescript/bin/tsc --project ./tsconfig.test.json --noEmit",
+    "test": "node --loader ts-node/esm --test  test/*.test.ts test/**/*.test.ts",
     "coverage": "./node_modules/nyc/bin/nyc.js report --reporter=text-lcov | coveralls ",
     "coveragehtml": "./node_modules/nyc/bin/nyc.js report --reporter=html "
   },
