--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^20.11.30",
     "@types/quill": "^2.0.14",
+    "@types/react": "^18.2.73",
     "browserify": "^16.2",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
@@ -20,7 +21,8 @@
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "build": "./node_modules/typescript/bin/tsc",
