--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.0.0",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^20.12.7",
@@ -57,11 +59,6 @@
     "url": "https://github.com/wirechunk/quill-delta-to-react/issues"
   },
   "homepage": "https://github.com/wirechunk/quill-delta-to-react#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
   "release": {
     "branches": [
       "master"
